--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <h3>V5</h3>
 
+<p><a href="https://github.com/downloads/gisce/erpclient/openerp-client-setup-5.0.18-gisce.exe">5.0.18</a></p>
 <p><a href="https://github.com/downloads/gisce/erpclient/openerp-client-setup-5.0.17-gisce.exe">5.0.17</a></p>
 
 <h3>V4</h3>
