--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <h3>V5</h3>
 
 <p><a href="https://github.com/downloads/gisce/erpclient/openerp-client-setup-5.1.0-beta-gisce.exe">5.1.0-beta</a></p>
+<p><a href="http://www.gisce.net/eines/openerp-client-setup-5.0.21-gisce.exe">5.0.21</a></p>
 <p><a href="https://github.com/downloads/gisce/erpclient/openerp-client-setup-5.0.20-gisce.exe">5.0.20</a></p>
 <p><a href="https://github.com/downloads/gisce/erpclient/openerp-client-setup-5.0.19-gisce.exe">5.0.19</a></p>
 <p><a href="https://github.com/downloads/gisce/erpclient/openerp-client-setup-5.0.18-gisce.exe">5.0.18</a></p>
