--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <p><a href="https://github.com/downloads/gisce/erpclient/openerp-client-setup-5.0.19-gisce.exe">5.0.19</a></p>
 <p><a href="https://github.com/downloads/gisce/erpclient/openerp-client-setup-5.0.18-gisce.exe">5.0.18</a></p>
 <p><a href="https://github.com/downloads/gisce/erpclient/openerp-client-setup-5.0.17-gisce.exe">5.0.17</a></p>
+<p><a href="http://www.gisce.net/eines/openerp-client-setup-5.0.16.exe">5.0.16</a></p>
 
 <h3>V4</h3>
 
